# Visionist

./: .gitignore  README.md  package-lock.json  package.json  plan.md  prd.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: catalog.py  main.py  models.py  recommender.py
backend/app/auth/: jwt.py
backend/app/db/: supabase_client.py
backend/app/services/: fit_image_store.py  guest_profile_store.py  profile_store.py  recommendation_store.py  wardrobe_store.py
backend/data/: products.json  styles.csv
backend/scripts/: csv_to_json.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  site-footer.tsx  site-header.tsx
frontend/src/components/account/: account-page.tsx  account-settings-page.tsx
frontend/src/components/assistant/: assistant-home.tsx  fit-upload-modal.tsx
frontend/src/components/auth/: auth-modal.tsx
frontend/src/components/onboarding/: profile-step.tsx  segment-step.tsx
frontend/src/lib/: api.ts  compress-image.ts  guest-profile.ts  guest-session.ts  migrate-local-storage.ts  mock-recommendation.ts  onboarding-icons.ts  profile.ts  prompt-suggestions.ts  style-images.ts  types.ts  utils.ts  wardrobe-storage.ts
supabase/: README.md
supabase/migrations/: 20260517000001_initial_schema.sql  20260517000002_rls_policies.sql  20260517000003_new_user_trigger.sql  20260518000004_preferred_size.sql  20260518000005_fit_uploads_storage.sql
(+12 files in other folders)
