[project]
name = "stil-ekonomi-backend"
version = "0.1.0"
description = "FastAPI recommendation service for Stil & Ekonomi assistant"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "google-generativeai>=0.7.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = []
